--- a/index.html
+++ b/index.html
@@ -258,75 +258,10 @@ OUR PARTNERS
                         </ul>
                     </div>
                 </div>
-                
-            </div>
-
-        </div>
+                </div>
+	    </div>
     </section><!--/#our-team-->
-   <!--/#our-team<section class="testimonial-area" id="testimonial">
-			<div class="container">
-				<div class="section-header">
-                <h2 class="section-title wow fadeInDown">What our clients says</h2>
-                <p class="wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p>
-            </div>
-				<div class="row">
-					<div class="col-md-4">
-						<div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
-							<div class="row">
-								<div class="col-xs-12">
-									<blockquote>Sontrary to popular belief, Lorem Ipsuis no simply random text. It has roots in a piece of classical Layears old. belief, Lorem Ipsuis not simply</blockquote>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xs-3">
-									<img src="images/pic1.jpg" alt="client">
-								</div>
-								<div class="col-xs-9 half-gutter">
-									<h5></h5>
-									<h6>Lorem Ipsuis simply</h6>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
-							<div class="row">
-								<div class="col-xs-12">
-									<blockquote>Tontrary to popular belief, Lorem Ipsuis no simply random text. It has roots in a piece of classical Layears old. belief, Lorem Ipsuis not simply</blockquote>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xs-3">
-									<img src="images/pic2.jpg" alt="client">
-								</div>
-								<div class="col-xs-9 half-gutter">
-									<h5>J</h5>
-									<h6>Lorem Ipsuis simply</h6>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
-							<div class="row">
-								<div class="col-xs-12">
-									<blockquote>Aontrary to popular belief, Lorem Ipsuis no simply random text. It has roots in a piece of classical Layears old. belief, Lorem Ipsuis not simply</blockquote>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xs-3">
-									<img src="images/pic1.jpg" alt="client">
-								</div>
-								<div class="col-xs-9 half-gutter">
-									<h5></h5>
-									<h6>Lorem Ipsuis simply</h6>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>-->
+   
    
   <section id="portfolio">
         <div class="container">
@@ -420,19 +355,24 @@ OUR PARTNERS
         </div><!--/.container-->
     </section><!--/#portfolio-->
 
-    <section id="upcoming-events">
+    <section id="services" style="background-color: #DAEAF7; padding: 50px 0;">
     <div class="container">
+
         <div class="section-header">
-            <h2 class="section-title wow fadeInDown">Upcoming Events</h2>
-            <p class="wow fadeInDown">Join our exciting events happening soon.</p>
+            <h2 class="section-title wow fadeInDown">Our Activities</h2>
+             </div>    
+        <div class="card-container">
+        <div class="card">
+            <div class="icon">📚</div>
+            <h3>Curriculum Preparation Workshop</h3>
+		<p>date: "September 15, 2024"<br>
+                location: "City Hall"<br>
+            A comprehensive curriculum offering foundational AI knowledge tailored to NRENs’ needs.</p>
+            <button class="learn-more-btn">Learn more</button>
         </div>
-
-        <div class="row" id="event-cards">
-            <!-- Event cards will be dynamically inserted here -->
-        </div>
-    </div>
-</section>
-
+		</div>
+    </div><!--/.container-->
+</section><!--/#services-->
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         // Example event data fetched from a calendar API
