--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <li class="scroll"><a href="#our-team">Our Team</a></li>
 						<li class="scroll"><a href="#portfolio">Gallery</a></li>
                         <li class="scroll"><a href="#upcoming-events">Upcoming events</a></li>
-						<li class="scroll"><a href="#hero-action-section">Knowledge Hub</a></li> 
+						<!--<li class="scroll"><a href="#hero-action-section">Knowledge Hub</a></li> -->
                         <li class="scroll"><a href="#contact-us">Contact</a></li> 
                         						
                     </ul>
@@ -359,7 +359,7 @@ OUR PARTNERS
     <div class="container">
 
         <div class="section-header">
-            <h2 class="section-title wow fadeInDown">Our Activities</h2>
+            <h2 class="section-title wow fadeInDown">Upcoming Events</h2>
              </div>    
         <div class="card-container">
         <div class="card">
