--- a/index.html
+++ b/index.html
@@ -107,23 +107,14 @@
             <h2 class="section-title wow fadeInDown" style="color: lightblue;">Empowering NRENs: Harnessing Generative AI for Enhanced Research and Education Across the Asia Pacific</h2>
         </div>
         <div class="row">
-            <div class="col-sm-6 wow fadeInLeft">
-                <img class="img-responsive" src="images/about.webp" alt="">
-            </div>
 
             <div class="col-sm-6 wow fadeInRight">
                 <h3 class="column-title" style="color: lightblue;">AP GAINED Project</h3>
                 <p style="color:grey;">AP-GAINED is a capacity-building initiative designed to empower National Research and Education Networks (NRENs) throughout the Asia Pacific region to effectively harness the power of Generative AI (GenAI).</p>
-                <p style="color:grey;">Many NRENs in Least Developed Countries (LDCs) and Lower Middle-Income Countries (LMICs) struggle with limited resources and expertise to effectively integrate GenAI. The fast-evolving nature of GenAI adds pressure on these resources. This project aims to address this gap by developing a scalable capacity-building program for NREN staff, prioritizing LDCs and LMICs while providing a model that can be applied globally. Unlike existing initiatives focused on technical skills and infrastructure, this program uniquely targets the potential of GenAI, essential for NRENs in LDCs and LMICs to support advanced research, deliver innovative education, and maximize their developmental impact.</p>
-                <ul class="listarrow" style="color:black;">
-                    <li><i class="fa fa-angle-double-right"></i>Building a tiered curriculum</li>
-                    <li><i class="fa fa-angle-double-right"></i>Developing a comprehensive knowledge base</li>
-                    <li><i class="fa fa-angle-double-right" style="color:black;"></i>Emphasizing hands-on application</li>
-                    <li><i class="fa fa-angle-double-right" style="color:black;"></i>Fostering a community of practice</li>
-                </ul>
-                <a href="about.html">
-                    <button class="learn-more-btn">Learn more</button>
-                </a>
+                <br> </br>
+		 <h4 class="column-title" style="color: lightblue;">Project background</h4>  
+		     <p style="color:grey;">AP-GAINED is a capacity-building initiative designed to empower National Research and Education Networks (NRENs) throughout the Asia Pacific region to effectively harness the power of Generative AI (GenAI).</p>
+                
             </div>
         </div>
     </div>
