--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         <li class="scroll active"><a href="#home">Home</a></li>  
                         <li class="scroll"><a href="#about">About</a></li> 
 						<li class="scroll"><a href="#services">Activities</a></li>
-                        <li class="scroll"><a href="#our-team">Our Team</a></li>
+                        <li class="scroll"><a href="#our-team">Our Partners</a></li>
 						<li class="scroll"><a href="#portfolio">Gallery</a></li>
-                        <li class="scroll"><a href="#upcoming-events">Upcoming events</a></li>
+                        <li class="scroll"><a href="#services">Upcoming events</a></li>
 						<!--<li class="scroll"><a href="#hero-action-section">Knowledge Hub</a></li> -->
                         <li class="scroll"><a href="#contact-us">Contact</a></li> 
                         						
